Fixed major issues with overlapping page styles, and page redirects were made

--- a/PersonalOnlineCalculator/Views/Shared/_Layout.cshtml.css
+++ b/PersonalOnlineCalculator/Views/Shared/_Layout.cshtml.css
@@ -1,4 +1,4 @@
-﻿a.navbar-brand {
+﻿/* a.navbar-brand {
   white-space: normal;
   text-align: center;
   word-break: break-all;
@@ -37,9 +37,9 @@ button.accept-policy {
 }
 
 .footer {
-  position: absolute;
+  position: relative;
   bottom: 0;
   width: 100%;
   white-space: nowrap;
   line-height: 60px;
-}
+} */
