--- a/PersonalOnlineCalculator/wwwroot/css/Signup.css
+++ b/PersonalOnlineCalculator/wwwroot/css/Signup.css
@@ -8,7 +8,7 @@
     font-family: "Poppins", sans-serif;
 }
 
-body {
+.signup-page-body {
     height: 100vh;
     width: 100vw;
     display: flex;
@@ -19,25 +19,25 @@ body {
     background-color: rgb(231, 231, 231);
 }
 
-header {
+.signupHeader {
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 10px;
+    gap: 20px;
 }
 
-.heading {
+.signupHeading {
     color: #1991ff;
 }
 
-.title {
+.signupTitle {
     font-weight: 400;
     letter-spacing: 1.5px;
 }
 
-.container {
+.signupContainer {
     height: 600px;
     width: 500px;
     background-color: white;
@@ -68,7 +68,7 @@ header {
     cursor: pointer;
 }
  
-.slider {
+.signupSlider {
     height: 60px;
     width: 150px;
     border-radius: 50px;
@@ -77,15 +77,11 @@ header {
         rgb(20, 143, 255));
     position: absolute;
     top: 20px;
-    left: 100px;
+    right: 100px;
     transition: all 0.5s ease-in-out;
 }
- 
-.moveslider {
-    left: 250px;
-}
- 
-.form-section {
+
+.signup-form-section {
     height: 500px;
     width: 1000px;
     padding: 20px 0;
@@ -130,7 +126,7 @@ header {
     font-size: 18px;
 }
  
-.clkbtn {
+.signup-clkbtn {
     height: 60px;
     width: 150px;
     border-radius: 50px;
@@ -147,7 +143,6 @@ header {
 }
  
 /* For Responsiveness of the page */
- 
 @media screen and (max-width: 650px) {
     .container {
         height: 600px;
