--- a/PersonalOnlineCalculator/wwwroot/css/site.css
+++ b/PersonalOnlineCalculator/wwwroot/css/site.css
@@ -1,7 +1,3 @@
-html {
-  font-size: 14px;
-}
-
 @media (min-width: 768px) {
   html {
     font-size: 16px;
@@ -12,11 +8,12 @@ html {
   box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 
-html {
+/* html {
   position: relative;
   min-height: 100%;
-}
+  font-size: 14px;
+} */
 
-body {
+/* .body {
   margin-bottom: 60px;
-}
+} */
